--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 <section id="cronr" class="title-slide slide level2 smaller center">
 <h2>cronR</h2>
 <ul>
-<li>Origionally by Kevin Ushey, but maintained by Jan Wijffels.</li>
+<li>Originally by Kevin Ushey, but maintained by Jan Wijffels.</li>
 <li>Helpers for writing Cron expressions and writing to crontab files.</li>
 </ul>
 <div class="fragment">
@@ -912,7 +912,7 @@
 <ul>
 <li><strong>Cron for the simpler automations</strong>
 <ul>
-<li>Syncronise crontab from a YAML file.</li>
+<li>Synchronise crontab from a YAML file.</li>
 </ul></li>
 </ul>
 </div>
